# snake_robo

./: CMakeLists.txt  README.md  package.xml  snake_robot.code-workspace
config/: empty.yaml  my_controllers.yaml
description/: gazebo_control.xacro  inertial_macros.xacro  materials.xacro  ros2_control.xacro  snake.robot.gazebo.xacro  snake.robot.urdf.xacro  snake_robot_core.xacro
launch/: launch_sim.launch.py  map.launch.py  rsp.launch.py
my_bot_python/: trial.py
rviz/: snake.rviz
screenshots/: slider.txt
scripts/: dataplotter.py  publisher_node.py  snake_robot.py  ui_simulation_bridge.py
scripts/logs/: poseinformation12_05_2023_16_01_04_j_0.txt  poseinformation12_05_2023_16_01_04_j_1.txt  poseinformation12_05_2023_16_01_04_j_2.txt  poseinformation12_05_2023_16_01_04_j_3.txt  poseinformation12_05_2023_16_01_04_j_4.txt  poseinformation12_05_2023_16_01_04_j_5.txt  poseinformation12_05_2023_16_01_04_j_6.txt  poseinformation12_05_2023_16_01_04_j_7.txt  poseinformation12_05_2023_16_01_04_j_8.txt  poseinformation12_05_2023_16_03_24_j_0.txt  poseinformation12_05_2023_16_03_24_j_1.txt  poseinformation12_05_2023_16_03_24_j_2.txt  poseinformation12_05_2023_16_03_24_j_3.txt  poseinformation12_05_2023_16_03_24_j_4.txt  poseinformation12_05_2023_16_03_24_j_5.txt  poseinformation12_05_2023_16_03_24_j_6.txt  poseinformation12_05_2023_16_03_24_j_7.txt  poseinformation12_05_2023_16_03_24_j_8.txt
worlds/: Trial_1.sdf  empty.world  emptyfarm.world
worlds/my_model/: model.config  model.sdf
